k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: med-easy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: med-easy
  template:
    metadata:
      labels:
        app: med-easy
    spec:
      containers:
        - name: med-easy
          image: bruzadinotavio/med-easy:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
