k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: med-easy-service
spec:
  selector:
    app: med-easy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort
